cart gap fixed
cart gap fixed

--- a/src/Components/Header/Navbar.css
+++ b/src/Components/Header/Navbar.css
@@ -1,13 +1,5 @@
-.fixed {
-    position: fixed;
+@media (max-width: 640px) {
+  .gapcont {
+    gap: 0;
   }
-  .transition-transform {
-    transition: transform 0.3s ease-in-out;
-  }
-  .z-40 {
-    z-index: 40; 
-  }
-  .shadow-md {
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  }
-  
+}
